--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -21,7 +21,11 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
 
     // MARK: - Vars
 
-    private var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
+    private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputParameters)!
+                                                            {%- else -%}
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)!
+                                                            {%- endif %}
     private var dismissed = false
 
     // MARK: - Life cycle
@@ -32,6 +36,9 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
             // TODO: Place your code here
         }
         state = .deinitialized
+        output?.{{ module_info.name[0] | downcase -}}
+                {%- assign myvariable_length = module_info.name | size | minus: 1 -%}
+                {{- module_info.name | slice: 1, myvariable_length }}ModuleDidDeallocate(self)
     }
 
     // MARK: - {% if custom_parameters.mcflurry_swift != "true" %}Rambler{% endif %}ViperModuleInput
@@ -63,6 +70,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - {{ prefix }}{{module_info.name}}ModuleInput
 
     func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+        assert(Thread.isMainThread)
         guard case .initial = state else { fatalError() }
         state = .ready(isViewReady: false)
         self.config = config
