--- a/Code/Interactor/interactor.tabbar.swift.liquid
+++ b/Code/Interactor/interactor.tabbar.swift.liquid
@@ -8,7 +8,11 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     // MARK: - Vars
     
-    {% if custom_parameters.extended_configure %}private var environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment!{% endif %}
+    {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)!
+                                                            {%- else -%}
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)!
+                                                            {%- endif -%}{%- endif %}
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
     
