--- a/Code/Interactor/interactor_input.swift.liquid
+++ b/Code/Interactor/interactor_input.swift.liquid
@@ -3,6 +3,10 @@
 import Foundation
 
 protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
-    {% if custom_parameters.extended_configure %}func configure(with environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment){% else %}func configure(){% endif %}
+    {% if custom_parameters.extended_configure %}func configure(with {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+                                                                    environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)
+                                                                    {%- else -%}
+                                                                    config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
+                                                                    {%- endif -%}{% else %}func configure(){% endif %}
     func deinitialize()
 }
