--- a/Code/Interactor/interactor.cachetracker_array.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker_array.swift.liquid
@@ -1,5 +1,6 @@
 {% include 'header' %}
 
+import Foundation
 import CacheTracker
 
 class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput, CacheTrackerDelegate {
@@ -16,7 +17,7 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
     {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
                                                             environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)!
                                                             {%- else -%}
-                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)!
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
                                                             {%- endif -%}{%- endif %}
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
@@ -25,7 +26,7 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
                                                                         environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)
                                                                         {%- else -%}
                                                                         config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
-                                                                        {%- endif -%}) {
+                                                                        {%- endif -%} {
         assert(Thread.isMainThread)
         if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
         assert(self.environment == nil)
