--- a/Code/Interactor/interactor.swift.liquid
+++ b/Code/Interactor/interactor.swift.liquid
@@ -1,5 +1,7 @@
 {% include 'header' %}
 
+import Foundation
+
 class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
     // MARK: - VIPER Vars
@@ -11,7 +13,7 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
     {% if custom_parameters.extended_configure %}private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
                                                             environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)!
                                                             {%- else -%}
-                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)!
+                                                            config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
                                                             {%- endif -%}{%- endif %}
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
@@ -20,9 +22,9 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
                                                                         environment: {{ prefix }}{{ module_info.name }}ModuleInputEnvironment)
                                                                         {%- else -%}
                                                                         config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
-                                                                        {%- endif -%}) {
+                                                                        {%- endif -%} {
         assert(Thread.isMainThread)
-        if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
+        {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
         assert(self.environment == nil)
         self.environment = environment
         {%- else -%}
