--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -22,7 +22,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: {% if custom_parameters.mcflu
     // MARK: - Vars
 
     private var {% if custom_parameters.split_module_config_into_parameters_and_environment == "true" -%}
-                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputParameters)!
+                                                            environment: {{ prefix }}{{ module_info.name }}ModuleInputParameters!
                                                             {%- else -%}
                                                             config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
                                                             {%- endif %}
